Swagger.js and Swagger.json and index.js changes, add gitignore, env
