# routes/index.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const passport = require('passport');
 
 router.use('/', require('./swagger'));
-
+router.use('/bakery', require('./bakery'));
 router.use('/employees', require('./employees'));
 router.use('/deli', require('./deli'));
 router.use('/produce', require('./produce'));
