# swagger.json
@@ -1,16 +1,48 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Star Wars API",
+    "title": "Grocery Store API",
+    "description": "Grocery Store API",
     "version": "1.0.0"
   },
-  "host": "ryanalvordcit341.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "Employee",
+      "description": "Add or make edits to the Employee Collection in the Grocery Store Database"
+    },
+    {
+      "name": "Bakery",
+      "description": "Add or make edits to the Bakery Items in the Grocery Store Database"
+    },
+    {
+      "name": "Deli",
+      "description": "Add or make edits to the Deli Items in the Grocery Store Database"
+    },
+    {
+      "name": "Produce",
+      "description": "Add or make edits to the Bakery Items in the Grocery Store Database"
+    }
+  ],
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/api-docs": {
       "get": {
         "description": "",
@@ -18,8 +50,9 @@
         "responses": {}
       }
     },
-    "/characters/": {
+    "/bakery/": {
       "get": {
+        "tags": ["Bakery"],
         "description": "",
         "produces": [
           "application/json"
@@ -32,51 +65,19 @@
         }
       },
       "post": {
+        "tags": ["Bakery"],
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "gender": {
-                  "example": "any"
-                },
-                "race": {
-                  "example": "any"
-                },
-                "vehicle": {
-                  "example": "any"
-                },
-                "affiliation": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "412": {
-            "description": "Precondition Failed"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
-    "/characters/{id}": {
+    "/bakery/{id}": {
       "get": {
+        "tags": ["Bakery"],
         "description": "",
         "produces": [
           "application/json"
@@ -99,6 +100,7 @@
         }
       },
       "put": {
+        "tags": ["Bakery"],
         "description": "",
         "parameters": [
           {
@@ -106,7 +108,50 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Bakery"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/employees/": {
+      "get": {
+        "tags": ["Employees"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Employees"],
+        "description": "",
+        "parameters": [
           {
             "name": "body",
             "in": "body",
@@ -122,95 +167,13 @@
                 "gender": {
                   "example": "any"
                 },
-                "race": {
+                "personalEmail": {
                   "example": "any"
                 },
-                "vehicle": {
+                "jobTitle": {
                   "example": "any"
                 },
-                "affiliation": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/planets/": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "planetName": {
-                  "example": "any"
-                },
-                "region": {
-                  "example": "any"
-                },
-                "sector": {
-                  "example": "any"
-                },
-                "suns": {
-                  "example": "any"
-                },
-                "moons": {
-                  "example": "any"
-                },
-                "terrain": {
+                "workEmail": {
                   "example": "any"
                 }
               }
@@ -221,11 +184,8 @@
           "201": {
             "description": "Created"
           },
-          "400": {
-            "description": "Bad Request"
-          },
-          "412": {
-            "description": "Precondition Failed"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -233,8 +193,9 @@
         }
       }
     },
-    "/planets/{id}": {
+    "/employees/{id}": {
       "get": {
+        "tags": ["Employees"],
         "description": "",
         "produces": [
           "application/json"
@@ -257,6 +218,131 @@
         }
       },
       "put": {
+        "tags": ["Employees"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Employees"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/deli/": {
+      "get": {
+        "tags": ["Deli"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Deli"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "example": "any"
+                },
+                "productName": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "calories": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "count": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/deli/{id}": {
+      "get": {
+        "tags": ["Deli"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "tags": ["Deli"],
         "description": "",
         "parameters": [
           {
@@ -271,22 +357,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "planetName": {
+                "type": {
                   "example": "any"
                 },
-                "region": {
+                "productName": {
                   "example": "any"
                 },
-                "sector": {
+                "price": {
                   "example": "any"
                 },
-                "suns": {
+                "calories": {
                   "example": "any"
                 },
-                "moons": {
+                "quantity": {
                   "example": "any"
                 },
-                "terrain": {
+                "count": {
                   "example": "any"
                 }
               }
@@ -300,6 +386,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -309,6 +398,7 @@
         }
       },
       "delete": {
+        "tags": ["Deli"],
         "description": "",
         "parameters": [
           {
@@ -320,10 +410,206 @@
         ],
         "responses": {
           "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/produce/": {
+      "get": {
+        "tags": ["Produce"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Produce"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "productName": {
+                  "example": "any"
+                },
+                "department": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
+                "color": {
+                  "example": "any"
+                },
+                "quality": {
+                  "example": "any"
+                },
+                "peakSeason": {
+                  "example": "any"
+                },
+                "amountInStock": {
+                  "example": "any"
+                },
+                "pricePerUnit": {
+                  "example": "any"
+                },
+                "unit": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/produce/{id}": {
+      "get": {
+        "tags": ["Produce"],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": ["Produce"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "productName": {
+                  "example": "any"
+                },
+                "department": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
+                "color": {
+                  "example": "any"
+                },
+                "quality": {
+                  "example": "any"
+                },
+                "peakSeason": {
+                  "example": "any"
+                },
+                "amountInStock": {
+                  "example": "any"
+                },
+                "pricePerUnit": {
+                  "example": "any"
+                },
+                "unit": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
             "description": "No Content"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Produce"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
